docs: add HTLC tutorial (draft v1)

--- a/scalus-site/content/smart-contracts/index.mdx
+++ b/scalus-site/content/smart-contracts/index.mdx
@@ -28,6 +28,7 @@ object MyValidator extends Validator:
 ## Tutorials
 
 - **[Build Your First Validator](/docs/smart-contracts/developing-smart-contracts)** — Create a spending validator, write tests, and debug step-by-step
+- **[HTLC Tutorial](/docs/smart-contracts/htlc-tutorial)** — Complete Hash Time-Locked Contract with tests and transactions
 - **[Compiling to Plutus](/docs/smart-contracts/compiling)** — Generate scripts, blueprints, and parameterized validators
 
 ## Validators
