docs: improve HTLC tutorial and add cross-links

--- a/scalus-site/content/get-started/for-cardano-developers.mdx
+++ b/scalus-site/content/get-started/for-cardano-developers.mdx
@@ -101,6 +101,7 @@ You'll learn:
 #### Core Validator Concepts
 
 - [ ] **[Validators in Depth](/docs/smart-contracts/validators)** - Spending, minting, rewarding, certifying validators in Scalus
+- [ ] **[HTLC Tutorial](/docs/smart-contracts/htlc-tutorial)** - Complete Hash Time-Locked Contract with transactions and tests
 - [ ] **[Plutus Data](/docs/smart-contracts/plutus-data)** - Automatic conversion between Scala types and Plutus `Data`
 - [ ] **[Custom Data Types](/docs/language-guide/data-types)** - Define datums and redeemers with case classes
 
