--- a/scalus-site/content/get-started/for-scala-developers.mdx
+++ b/scalus-site/content/get-started/for-scala-developers.mdx
@@ -72,6 +72,7 @@ You'll learn:
 - [ ] **[Understanding eUTxO Model](https://docs.cardano.org/about-cardano/learn/eutxo-explainer)** - How Cardano manages state (15 min)
 - [ ] **[The EUTxO-Model - Plutus Pioneer Program](https://www.youtube.com/watch?v=ulYDNaEKf4g)** - Learning details (25 min)
 - [ ] **[Validators in Depth](/docs/smart-contracts/validators)** - Spending, minting, rewarding, certifying validators (20 min)
+- [ ] **[HTLC Tutorial](/docs/smart-contracts/htlc-tutorial)** - Complete Hash Time-Locked Contract example (45 min)
 
 #### Scalus-Specific Concepts
 
