--- a/scalus-site/content/smart-contracts/developing-smart-contracts.mdx
+++ b/scalus-site/content/smart-contracts/developing-smart-contracts.mdx
@@ -237,6 +237,7 @@ Congratulations! You've successfully created, tested, and debugged your first Ca
 
 ### Continue Your Journey
 
+- **[HTLC Tutorial](/docs/smart-contracts/htlc-tutorial)** - Build a complete Hash Time-Locked Contract with transactions and tests
 - **[Validators in Depth](/docs/smart-contracts/validators)** - Learn about different validator types and patterns
 - **[Testing Smart Contracts](/docs/testing/unit-testing)** - Advanced testing techniques and property-based testing
 - **[Debugging and Troubleshooting](/docs/testing/debugging)** - Deep dive into debugging strategies
