fix: add missing Callout import

--- a/scalus-site/content/language-guide/control-flow.mdx
+++ b/scalus-site/content/language-guide/control-flow.mdx
@@ -4,6 +4,8 @@ sidebarTitle: Control Flow
 description: Control program execution in Cardano smart contracts using Scalus. Learn if-then-else conditionals, pattern matching on case classes and enums, and handling logic flow efficiently.
 ---
 
+import { Callout } from 'nextra/components'
+
 # Control Flow
 
 Scalus provides control flow constructs for directing program execution in smart contracts. These constructs—if-then-else and pattern matching—are sufficient for most validator logic and compile efficiently to Plutus Core.
