docs: improve JS/TS emulator SEO and cross-linking
- Update title/H1 to "Cardano Emulator for JavaScript and TypeScript"
- Replace intro with reference to JVM emulator page to avoid duplication
- Add JS/TS Emulator to testing index overview table and See Also
- Add cross-link from JVM emulator page to JS/TS emulator

--- a/scalus-site/content/testing/emulator.mdx
+++ b/scalus-site/content/testing/emulator.mdx
@@ -235,6 +235,7 @@ test("minting policy validates token name") {
 
 ## See Also
 
+- [JS/TS Emulator](/docs/testing/js-emulator) — Emulator for JavaScript and TypeScript
 - [Local Devnet](/docs/testing/local-devnet) — Docker-based devnet for integration testing
 - [Provider](/docs/ledger/provider) — The Provider interface
 - [Ledger Rules](/docs/ledger/ledger-rules) — Transaction validation rules
