--- a/scalus-site/content/testing/index.mdx
+++ b/scalus-site/content/testing/index.mdx
@@ -18,6 +18,7 @@ Scalus provides comprehensive testing tools for Cardano smart contracts — unit
 | **[Unit Testing](/docs/testing/unit-testing)** | Property-based tests with ScalaCheck | Validator logic verification |
 | **[Debugging](/docs/testing/debugging)** | IDE debugging, logging, error traces | Finding and fixing bugs |
 | **[Emulator](/docs/testing/emulator)** | In-memory Cardano node | Fast iteration, CI/CD |
+| **[JS/TS Emulator](/docs/testing/js-emulator)** | Emulator for JavaScript/TypeScript | Browser DApps, Node.js tooling |
 | **[Local Devnet](/docs/testing/local-devnet)** | Docker-based real Cardano node | Integration tests, pre-deployment |
 
 ## Unit Testing with ScalaCheck
@@ -111,6 +112,7 @@ Pre-deployment:
 - [Unit Testing](/docs/testing/unit-testing) — Property-based testing with ScalaCheck
 - [Debugging](/docs/testing/debugging) — IDE debugging and logging
 - [Emulator](/docs/testing/emulator) — In-memory testing with instant feedback
+- [JS/TS Emulator](/docs/testing/js-emulator) — Emulator for JavaScript and TypeScript
 - [Local Devnet](/docs/testing/local-devnet) — Integration testing with real Cardano node
 - [Ledger Rules](/docs/ledger/ledger-rules) — Validation rules used by testing tools
 
