--- a/scalus-site/content/testing/js-emulator.mdx
+++ b/scalus-site/content/testing/js-emulator.mdx
@@ -1,14 +1,14 @@
 ---
-title: JavaScript/TypeScript Emulator
+title: Cardano Emulator for JavaScript and TypeScript
 sidebarTitle: JS/TS Emulator
 description: Use the Scalus Emulator in JavaScript or TypeScript for fast Cardano smart contract testing. Submit transactions, validate scripts, and manage UTxO state without a real node.
 ---
 
 import { Callout } from 'nextra/components'
 
-# JavaScript/TypeScript Emulator
+# Cardano Emulator for JavaScript and TypeScript
 
-The `Emulator` class provides an in-memory Cardano node for JavaScript/TypeScript. Submit transactions, execute Plutus scripts, and validate against ledger rules — all without a real node.
+The [Scalus Emulator](/docs/testing/emulator) — an in-memory Cardano node with full transaction validation and Plutus script execution — is also available as an npm package for JavaScript and TypeScript.
 
 ## What It Validates
 
